add user profile endpoints
