# src/main/java/com/tmv/core/controller/UserController.java
@@ -1,19 +1,18 @@
 package com.tmv.core.controller;
 
 import com.tmv.core.dto.UserFeaturesDTO;
+import com.tmv.core.dto.UserProfileAdminUpdateDTO;
+import com.tmv.core.dto.UserProfileDTO;
+import com.tmv.core.dto.UserProfileUpdateDTO;
 import com.tmv.core.service.UserService;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.core.Authentication;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-import java.util.Optional;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
+@RequestMapping("/api/v1/user")
 public class UserController extends BaseController {
 
     private final UserService userService;
@@ -23,11 +22,33 @@ public class UserController extends BaseController {
         this.userService = userService;
     }
 
-    @GetMapping("/api/v1/user/{username}/features")
+    @GetMapping("/{username}/features")
     @PreAuthorize("hasRole('GOD') or #username == authentication.name")
-    public ResponseEntity<UserFeaturesDTO> getUserFeatures(@PathVariable String username, Authentication authentication) {
-        Optional<UserFeaturesDTO> features = userService.getUserFeatures(username);
-        return features.map(ResponseEntity::ok)
+    public ResponseEntity<UserFeaturesDTO> getUserFeatures(@PathVariable String username) {
+        return userService.getUserFeatures(username)
+                .map(ResponseEntity::ok)
                 .orElseGet(() -> ResponseEntity.notFound().build());
+    }
+
+    @GetMapping("/{username}/profile")
+    @PreAuthorize("hasRole('GOD') or #username == authentication.name")
+    public ResponseEntity<UserProfileDTO> getUserProfile(@PathVariable String username) {
+        return userService.getUserProfile(username)
+                .map(ResponseEntity::ok)
+                .orElseGet(() -> ResponseEntity.notFound().build());
+    }
+
+    @PutMapping("/{username}/profile")
+    @PreAuthorize("#username == authentication.name")
+    public ResponseEntity<UserProfileDTO> updateUserProfile(@PathVariable String username, @RequestBody @Valid UserProfileUpdateDTO profileUpdate) {
+        UserProfileDTO updatedProfile = userService.updateUserProfile(username, profileUpdate);
+        return ResponseEntity.ok(updatedProfile);
+    }
+
+    @PutMapping("/{username}/admin/profile")
+    @PreAuthorize("hasRole('GOD')")
+    public ResponseEntity<UserProfileDTO> adminUpdateUserProfile(@PathVariable String username, @RequestBody @Valid UserProfileAdminUpdateDTO profileUpdate) {
+        UserProfileDTO updatedProfile = userService.adminUpdateUserProfile(username, profileUpdate);
+        return ResponseEntity.ok(updatedProfile);
     }
 }
